<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.fragment.EnterUserNameFragment"
        android:padding="14dp">

        <TextView
            android:id="@+id/tvCommentStatic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_username_to_comment"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:fontFamily="@font/cera_pro_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1.2dp"
            android:layout_marginTop="8dp"
            app:dividerColor="#E2E1E1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCommentStatic" />

        <TextView
            android:id="@+id/tvUsernameStatic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginTop="26dp"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:fontFamily="@font/cera_pro_bold"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUsernameStatic"
            app:strokeColor="@color/primary_color"
            app:strokeWidth="1.5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextComment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/cera_pro_medium"
                    android:hint="@string/enter_your_username"
                    android:padding="16dp"
                    android:inputType="textCapWords"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnApply"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/backgrounrd_dark_blue"
            android:fontFamily="@font/cera_pro_medium"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvUserName"
            app:layout_constraintVertical_bias="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>